--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ footer { text-align:center; color:var(--muted); margin-top:18px; font-size:13px 
         <div class="skill"><div class="icon"><i class="fa-solid fa-file-lines"></i></div><div class="meta">MS Office</div></div>
         <div class="skill"><div class="icon"><i class="fa-brands fa-salesforce"></i></div><div class="meta">Salesforce</div></div>
         <div class="skill"><div class="icon"><i class="fa-solid fa-pen-nib"></i></div><div class="meta">Adobe InDesign (basic)</div></div>
-        <div class="skill"><div class="icon"><i class="fa-solid fa-image"></i></div><div class="meta">Photoshop (basic)</div></div>
+        <div class="skill"><div class="icon"><i class="fa-solid fa-image"></i></div><div class="meta">Adobe Photoshop (basic)</div></div>
       </div>
     </aside>
   </div>
@@ -252,7 +252,7 @@ footer { text-align:center; color:var(--muted); margin-top:18px; font-size:13px 
     <div class="timeline-item" data-aos="fade-up" data-aos-delay="120">
       <div class="meta">2022 – Jan 2025</div>
       <div class="title">Apprenticeship: Industrial Clerk — ETERNA Mode GmbH</div>
-      <div class="small">Commercial apprenticeship with industrial focus</div>
+      <div class="small">During my apprenticeship at ETERNA Mode GmbH, I rotated through various departments and, in my final year, remained in Product Management — both because I enjoyed the work and due to my flexibility. My role spanned a broad range of tasks: from marketing activities such as creating brochures, to ordering fabric samples for purchasing, to using the software Penelope to design shirts in collaboration with the design department. I also coordinated meetings for the sales team and prepared performance reports, gaining a comprehensive view of the product lifecycle from concept to market.</div>
     </div>
     <div class="timeline-item" data-aos="fade-up" data-aos-delay="190">
       <div class="meta">Jan 2025 – Jun 2025</div>
@@ -260,8 +260,8 @@ footer { text-align:center; color:var(--muted); margin-top:18px; font-size:13px 
       <div class="small">Professional English for business contexts</div>
     </div>
     <div class="timeline-item" data-aos="fade-up" data-aos-delay="260">
-      <div class="meta">From Oct 2025</div>
-      <div class="title">BSc Environmental & Bioresource Management (planned)</div>
+      <div class="meta">Start Oct 2025</div>
+      <div class="title">BSc Environmental & Bioresource Management </div>
     </div>
   </div>
 </section>
@@ -272,9 +272,9 @@ footer { text-align:center; color:var(--muted); margin-top:18px; font-size:13px 
         <h3 style="color:var(--accent)">Professional Experience</h3>
         <div class="experience-grid" style="margin-top:18px">
           <div class="exp-card" data-aos="fade-up">
-            <div class="meta small">2020 – 2021</div>
+            <div class="meta small">August 2020 & August 2021</div>
             <div class="title">Assistant — ETERNA Mode GmbH</div>
-            <p class="small muted">Worked as a temporary assistant supporting store and operational tasks; gained insight into corporate processes and customer interactions.</p>
+            <p class="small muted">Worked as a temporary assistant; gained insight into corporate processes </p>
           </div>
 
           <div class="exp-card" data-aos="fade-up" data-aos-delay="60">
